--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-ZXCASDADASCAascxasca
+<!DOCTYPE html>
+<html lang="ko">
+ <head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <title>
+   Document
+  </title>
+ </head>
+ <body>
+  <h1>
+   MY BLOG
+  </h1>
+  <a href="index.html">
+   HOME
+  </a>
+  <a href="content\3.html">
+   3
+  </a>
+ </body>
+</html>
